删除多余js和example后, 遗留问题

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -101,10 +101,13 @@
         dataSource: [
           {
             text: "首页",
-            ContentUrl: "../../examples/content/web/tabstrip/ajax/ajaxContent1.html"
+            ContentUrl: "./app.html"
           }
         ]
       }).data('kendoTabStrip')
+
+      var tabToActivate = $("#tabstrip li:first")
+      $("#tabstrip").kendoTabStrip().data("kendoTabStrip").activateTab(tabToActivate)
 
       var configureCloseTab = function () {
         var tabsElements = $('#tabstrip li[role="tab"]:gt(0)');
