--- a/src/demo/form.html
+++ b/src/demo/form.html
@@ -1,23 +1,31 @@
 <div class="demo-section k-content">
   <h1 class="form-title">表单</h1>
   <div id="validation-success"></div>
-  <ul id="panelbar">
-    <li id="item1">基本信息
-      <div>
-        <form id="exampleform"></form>
-      </div>
-    </li>
-    <li id="item2">动态行
-      <div>
-        <div id="grid"></div>
-      </div>
-    </li>
-    <li id="item3">明细信息
-      <div>
-        
-      </div>
-    </li>
-  </ul>
+  <div class="form-content">
+    <ul id="panelbar">
+      <li id="item1">基本信息
+        <div>
+          <form id="exampleform"></form>
+        </div>
+      </li>
+      <li id="item2">动态行
+        <div>
+          <div id="grid"></div>
+        </div>
+      </li>
+      <li id="item3">明细信息
+        <div>
+          
+        </div>
+      </li>
+    </ul>
+    <div class="oper-btn">
+      <button><i class="fa fa-save"></i></button>
+      <button><i class="fa fa-close"></i></button>
+      <button><i class="fa fa-check"></i></button>
+    </div>
+  </div>
+  
 </div>
 
 <script type="text/javascript">
@@ -126,6 +134,7 @@
       validationSuccess.html("");
     },
     submit: function (e) {
+      console.log(e,'e')
       e.preventDefault();
       validationSuccess.html("<div class='k-messagebox k-messagebox-success'>Form data is valid!</div>");
     },
@@ -184,4 +193,8 @@
         ]
       });
   }
+
+  $('.fa-save').on('click', function(){
+    $("#exampleform").find('.k-form-submit').trigger('click')
+  })
 </script>
