皮肤功能实现方案优化

--- a/src/demo/index.html
+++ b/src/demo/index.html
@@ -3,7 +3,6 @@
 <head>
   <title>menu</title>
   <meta charset="utf-8">
-  <link href="../../styles/kendo.default.min.css" rel="stylesheet">
   <link href="../../styles/all.css" rel="stylesheet">
 </head>
 
@@ -158,15 +157,16 @@
 
       // localStorage获取theme
       if(localStorage.getItem("theme")) {
-        includeLinkStyle(localStorage.getItem("theme"));
+        initPageTheme(localStorage.getItem("theme"));
       }
 
-      function includeLinkStyle(url) {
-        var link = document.createElement("link");
-        link.rel = "stylesheet";
-        link.type = "text/css";
-        link.href = url;
-        document.getElementsByTagName("html")[0].appendChild(link);
+      function initPageTheme(themeUrl){
+        let $theme = $('#page-theme');
+        if(!$theme.length){
+          $theme = $('<link rel="stylesheet" href="'+themeUrl+'" id="page-theme">').insertAfter($('head'));
+        }else{
+          $theme.attr('href', themeUrl);
+        }
       }
 
       // 关闭其它
