实现多语言(kendo多语言切换及项目的业务层多语言实现)

--- a/src/demo/frozen.html
+++ b/src/demo/frozen.html
@@ -31,7 +31,7 @@
     editable: true,
     columns: [{
       field: "OrderID",
-      title: "Order ID",
+      title: $t('orderId'),
       locked: true,
       lockable: false,
       width: 150
